--- a/it/kicad.po
+++ b/it/kicad.po
@@ -77,7 +77,7 @@ msgstr ""
 "Project-Id-Version: KiCad\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-02-23 23:01+0100\n"
-"PO-Revision-Date: 2018-02-23 23:23+0100\n"
+"PO-Revision-Date: 2018-02-24 10:40+0100\n"
 "Last-Translator: Marco Ciampa <ciampix@libero.it>\n"
 "Language-Team: Italian <tp@lists.linux.it>\n"
 "Language: it\n"
@@ -18885,7 +18885,7 @@ msgstr "Caricamento incompleto; interrotto dall'utente."
 
 #: pcbnew/footprint_editor_onclick.cpp:257
 msgid "Duplicate Block (shift + drag mouse)"
-msgstr "Diplica blocco (maiusc + trascina il mouse)"
+msgstr "Duplica blocco (maiusc + trascina il mouse)"
 
 #: pcbnew/footprint_editor_onclick.cpp:260
 msgid "Mirror Block (alt + drag mouse)"
