--- a/zh_CN/kicad.po
+++ b/zh_CN/kicad.po
@@ -3,16 +3,16 @@ msgstr ""
 "Project-Id-Version: KICAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-05-02 09:46+0200\n"
-"PO-Revision-Date: 2017-08-23 11:22+0200\n"
-"Last-Translator:\n"
-"Language-Team:\n"
+"PO-Revision-Date: 2018-05-04 02:00+0800\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-KeywordsList: _HKI;_\n"
 "X-Poedit-Basepath: E:/kicad\n"
-"X-Generator: Poedit 1.8.8\n"
+"X-Generator: Poedit 2.0.7\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-SearchPath-0: kicad\n"
 "X-Poedit-SearchPath-1: pcbnew\n"
@@ -2206,9 +2206,8 @@ msgid "Write Hotkey Configuration File:"
 msgstr "导出快捷键配置："
 
 #: common/hotkeys_basic.cpp:799
-#, fuzzy
 msgid "&Edit Hotkeys..."
-msgstr "编辑快捷键(&E)"
+msgstr "编辑快捷键(&E)..."
 
 #: common/hotkeys_basic.cpp:800
 #, fuzzy
@@ -18552,7 +18551,7 @@ msgstr "查看网络的名称和ID列表"
 
 #: pcbnew/menubar_pcb_editor.cpp:307 pcbnew/menubar_footprint_editor.cpp:403
 msgid "&Measure"
-msgstr ""
+msgstr "测量(&M)"
 
 #: pcbnew/menubar_pcb_editor.cpp:314
 #, fuzzy
